Index page Modified

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Our main services.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -69,15 +69,16 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Tax refund</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Filing your income tax is simple and efficient with our service. Our expert team ensures you get the maximum refund possible with minimal effort on your part. Just submit your documents, and we'll handle the rest—from accurate calculations to timely submissions. Enjoy a hassle-free tax filing experience and more money back in your pocket. Try us today for stress-free tax solutions!</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Pension Lunpsum</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Pension Lumpsum</h4>
+                        <p class="text-muted">Our service assists individuals leaving Japan in claiming their Shakai Hoken (Nenkin Lump-Sum Withdrawal) or retirement contributions refund. Upon departure, whether temporarily or permanently, you can initiate the process to claim your tax refund, typically after residing outside Japan for 6-8 months. You have a two-year window from your departure date to apply for your pension refund, ensuring you can manage your retirement funds efficiently and effectively. Let us simplify the process and ensure you receive the benefits you're entitled to promptly and securely.
+                        </p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -85,7 +86,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Document Translation</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Our document translation service offers high-quality translations at affordable rates. We specialize in translating from Japanese to English, Nepali to Japanese, English to Japanese, and Hindi to Japanese. Our professional translators ensure accuracy and confidentiality, delivering precise translations for legal, medical, business, and personal documents. Experience seamless communication and exceptional service without breaking the bank. Choose us for reliable and cost-effective document translation solutions today!</p>
                     </div>
                 </div>
             </div>
@@ -108,7 +109,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
+                                <div class="portfolio-caption-heading">Tax</div>
                                 <div class="portfolio-caption-subheading text-muted">Illustration</div>
                             </div>
                         </div>
@@ -203,33 +204,33 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>2022-Present</h4>
+                                <h4 class="subheading">Kuhiro Mart</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Kuhiro Mart is for premium halal-certified products. We offer a wide range of fresh meats, seafood, pantry essentials, dairy, frozen foods, and delicious bakery items, all meeting the highest halal standards. Enjoy quality, variety, and exceptional customer service both in-store and online.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>October 2023</h4>
+                                <h4 class="subheading">Kuhiro Car</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Looking for the best-rated cars at unbeatable prices? You’re in the right place! Just tell us your preferences, and we’ll find the perfect vehicle for you. Whether you need a reliable sedan, a spacious SUV, or a sporty coupe, we’ve got you covered. Drop your desires here, and let us do the rest!</p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4>December 2023</h4>
+                                <h4 class="subheading">Kuhiro Tax and Pension</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Kuhiro Tax and Pension excels in simplifying tax filing for maximum refunds, handling pension lump-sum withdrawals, and providing accurate document translations. Our services ensure efficient management of financial and legal processes, offering peace of mind to clients in Japan.</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
+                    <!-- <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -238,15 +239,15 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
-                    </li>
+                    </li> -->
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                Other Services
                                 <br />
-                                Of Our
+                                Will be
                                 <br />
-                                Story!
+                                Opening Soon...
                             </h4>
                         </div>
                     </li>
@@ -254,7 +255,7 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <!-- <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
@@ -296,9 +297,9 @@
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Clients-->
-        <div class="py-5">
+        <!-- <div class="py-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
@@ -315,7 +316,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="page-wrapper bg-dark p-t-100 p-b-50">
