--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
+                        <li class="nav-item"><a class="nav-link" href="#contactus">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -196,7 +196,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">About Us</h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -317,21 +317,28 @@
             </div>
         </div> -->
         <!-- Contact-->
-      
+              <section class="page-section bg-white" id="contactus">
+                <div class="container">
+                <div class="text-center">
+
+                <h2 class="section-heading text-uppercase ">Contact Us</h2>
+                <a class="btn btn-dark btn-social mx-2" href="https://wa.me/qr/IKUH5V5TMUL4M1" aria-label="Whatsapp"><i class="fab fa-whatsapp" target="_blank"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=61557952170266" aria-label="Facebook"><i class="fab fa-facebook-f"target="_blank"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@kuhiro.nenkin?_t=8nbdT9ee6Co&_r=1" aria-label="Tiktok" target="_blank"><i class="fab fa-tiktok"></i></a>
+                </div>
+            </div>
+                </section>
+
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Taxnenkin 2024</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                    <div class="col-lg-4 text-lg-end">
+                    <div class="align-items-center">Copyright &copy; Taxnenkin 2024</div>
+                    
+                    <!-- <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </footer>
