open in another

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                 <div class="text-center">
 
                 <h2 class="section-heading text-uppercase ">Contact Us</h2>
-                <a class="btn btn-dark btn-social mx-2" href="https://wa.me/qr/IKUH5V5TMUL4M1" aria-label="Whatsapp"><i class="fab fa-whatsapp" target="_blank"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=61557952170266" aria-label="Facebook"><i class="fab fa-facebook-f"target="_blank"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://wa.me/qr/IKUH5V5TMUL4M1" aria-label="Whatsapp" target="_blank"><i class="fab fa-whatsapp" ></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=61557952170266" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@kuhiro.nenkin?_t=8nbdT9ee6Co&_r=1" aria-label="Tiktok" target="_blank"><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>
