--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <img src="assets/img/logos/kuhirologo.png" height="50" width="50"/>
+                <img src="assets/img/logos/kuhirologo.png" alt="Kuhiro Logo" title="Kuhiro Logo" height="50" width="50"/>
                 <a class="navbar-brand" href="#page-top">Kuhiro Tax and Pension</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -225,7 +225,7 @@
                 <div class="text-center">
 
                 <h2 class="section-heading text-uppercase ">Contact Us</h2>
-                <a class="btn btn-dark btn-social mx-2" href="https://wa.me/qr/IKUH5V5TMUL4M1" aria-label="Whatsapp" target="_blank"><i class="fab fa-whatsapp" ></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://wa.me/818074008763" aria-label="Whatsapp" target="_blank"><i class="fab fa-whatsapp" ></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=61557952170266" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@kuhiro.nenkin?_t=8nbdT9ee6Co&_r=1" aria-label="Tiktok" target="_blank"><i class="fab fa-tiktok"></i></a>
                 </div>
